fix: tooltip: fixes tooltip toggle on mobile devices (#668)
* fix: tooltip: fixes tooltip toggle on mobile devices

* chore: tooltip: adds click toggle unit test

* chore: coverage: adds tooltip and mobile detector tests

* chore: popup: adds istouching method to test for hybrid devices

* chore: popup: update function name and ensure cloned element props are preserved

--- a/src/components/Tooltip/tooltip.module.scss
+++ b/src/components/Tooltip/tooltip.module.scss
@@ -56,10 +56,10 @@ $tooltip-arrow-shadow: 0px 1px 2px rgba(15, 20, 31, 0.12);
         content: '';
         left: -$space-xs;
         padding: $space-xs;
-        pointer-events: none;
         position: absolute;
         right: -$space-xs;
         top: -$space-xs;
+        z-index: -2; // Place below the arrow
       }
     }
   }
